# headless-ecommerce-api

./: .env.template  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
apps/accounts/: admin.py  authentication.py  models.py  tests.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/core/: pagination.py  permissions.py
apps/products/: admin.py  models.py  tests.py
apps/products/api/v1/: serializers.py  tests.py  urls.py  views.py
apps/products/api/v1/serializers/: __init__.py  brand.py  category.py  nested.py  product.py  variant.py  variant_image.py
apps/products/api/v1/urls/: admin.py  public.py
apps/products/fixtures/: category.json  category_mp.json
apps/products/management/commands/: seed_from_dummyjson.py
apps/products/migrations/: 0001_initial.py  0002_brand_slug_category_slug_product_slug.py  0003_product_thumbnail.py  0004_alter_product_thumbnail_productimage.py  0005_remove_category_unique_category_per_parent.py  0006_variant_variantimage_remove_productimage_product_and_more.py
apps/products/tests/: test_models.py
apps/products/tests/api/v1/: test_admin.py  test_public.py  test_serializers.py  test_views.py
config/: pagination.py  settings.py  urls.py
config/settings/: base.py  dev.py  test.py
http/: auth.http  products_v1.http
requirements/: base.in  base.txt  dev.in  dev.txt
