# ==============================
# Build system (required)
# ==============================
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# ==============================
# Import sorting (isort)
# ==============================
[tool.isort]
profile = "black"
known_first_party = ["apps"]
known_third_party = ["django"]

# ==============================
# Type checking (Pyright)
# ==============================
[tool.pyright]
typeCheckingMode = "basic"
autoImportCompletions = true
reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
reportAttributeAccessIssue = false

include = ["apps", "config"]
extraPaths = ["./apps", "./config"]
exclude = ["**/.venv", "**/__pycache__", "**/migrations", "node_modules"]

# ==============================
# Django template linting (djlint)
# ==============================
[tool.djlint]
ignore = "H030,H031,H006"
exclude = ".venv"
max_blank_lines = 1
blank_line_after_tag = "load,extends,include"
blank_line_before_tag = "load,extends,include"
close_void_tags = true

# ==============================
# Testing (pytest)
# ==============================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]
addopts = "--cov=apps --cov-report=term-missing"

# ==============================
# Code coverage (coverage.py)
# ==============================
[tool.coverage.run]
branch = true
source = ["apps"]

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if settings.DEBUG",
]
